--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Bangladesh20.css">
     <link rel="stylesheet" href="components.css">
     <link rel="stylesheet" href="font.css">
-    <link rel="stylesheet" href="index.css">
+    <!-- <link rel="stylesheet" href="index.css"> -->
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
