edited some stuff trying some other stuff out

--- a/index.html
+++ b/index.html
@@ -4,26 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bangladesh 2.0</title>
-    <link rel="stylesheet" href="Bangladesh20.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="Bangladesh20.css">
     <link rel="stylesheet" href="components.css">
     <link rel="stylesheet" href="font.css">
-    <!-- <link rel="stylesheet" href="index.css"> -->
+    <link rel="stylesheet" href="index.css"> -->
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
+<body class="fira-sans-bold">
 
     <!-- Navbar -->
     <header>
-        <nav>
-            <h1 class="header-logo">Bangladesh 2.0</h1>
-            <button>Sign In</button>
+        <nav class="navbar">
+            <!-- use span if you need to modify anything in between the words or change colour of something -->
+            <h3 class="header-logo">Bangladesh 2.0</h3>
+            <ul>
+                <li><a href =""><button class="btn-primary">Sign In</button></a></li>
+            </ul>
         </nav>
     </header>
 
     <!-- Banner Section -->
     <section class="banner">
         <div class="banner-content">
-            <h0>Bangladesh 2.0</h0>
+            <h0 class="dark-2">Bangladesh 2.0</h0>
             <h2>Idea, innovation,<br> vision and challenges in <br> New Bangladesh.</h2>
             <button>Explore New Bangladesh</button>
         </div>
