done with the hero page now onto the following pages

--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <!-- Banner Section -->
     <section class="banner">
         <div class="banner-content">
-            <h0 class="dark-2">Bangladesh 2.0</h0>
+            <h1 class="dark-2">Bangladesh 2.0</h1>
             <h2>Idea, innovation,<br> vision and challenges in <br> New Bangladesh.</h2>
-            <button>Explore New Bangladesh</button>
+            <button class="btn-secondary">Explore New Bangladesh</button>
         </div>
         <div class="banner-image">
             <img src="/assets/hero.png" alt="Hero Page Logo">
