--- a/index.html
+++ b/index.html
@@ -43,23 +43,23 @@
         <h2>Pillars of "Bangladesh 2.0"</h2>
         <div class="pillars-container">
             <div class="pillar-card">
-                <img src="/assets/card-icon.png" alt="Innovation Icon">
-                <h3>Innovation</h3>
+                <img class="lightb" src="/assets/card-icon.png" alt="Innovation Icon">
+                <h3 class="textleft">Innovation</h3>
                 <p>Dolor sit amet consectetur elit.</p>
             </div>
             <div class="pillar-card">
-                <img src="/assets/card-icon.png" alt="Sustainability Icon">
-                <h3>Sustainability</h3>
+                <img class="lightb" src="/assets/card-icon.png" alt="Sustainability Icon">
+                <h3 class="textleft">Sustainability</h3>
                 <p>Dolor sit amet consectetur elit.</p>
             </div>
             <div class="pillar-card">
-                <img src="/assets/card-icon.png" alt="Infrastructure Icon">
-                <h3>Infrastructure</h3>
+                <img class="lightb" src="/assets/card-icon.png" alt="Infrastructure Icon">
+                <h3 class="textleft">Infrastructure</h3>
                 <p>Dolor sit amet consectetur elit.</p>
             </div>
             <div class="pillar-card">
-                <img src="/assets/card-icon.png" alt="Empowerment Icon">
-                <h3>Empowerment</h3>
+                <img class="lightb" src="/assets/card-icon.png" alt="Empowerment Icon">
+                <h3 class="textleft">Empowerment</h3>
                 <p>Dolor sit amet consectetur elit.</p>
             </div>
         </div>
