--- a/index.html
+++ b/index.html
@@ -68,54 +68,105 @@
     <!-- Vision of Future -->
     <section class="vision">
         <h2>The Vision of Future</h2>
+        <p class="vision-description">
+            Bangladesh 2.0 aims to redefine the nation’s trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.
+        </p>
         <div class="vision-cards">
-            <div class="vision-card">
+            <div class="vision-card1">
                 <img src="/assets/card-icon.png" alt="Digital Transformation">
                 <h3>Digital Transformation</h3>
-                <p>Creating a nationwide digital ecosystem.</p>
-                <button>Learn More</button>
+                <p class="visiontext">Creating a nationwide digital ecosystem.</p>
+                <button class="vbtn1">Learn More</button>
             </div>
-            <div class="vision-card">
+            <div class="vision-card2">
                 <img src="/assets/card-icon.png" alt="Green Energy">
                 <h3>Green Energy</h3>
-                <p>Investments in solar and wind energy.</p>
-                <button>Learn More</button>
+                <p class="visiontext">Investments in solar and wind energy.</p>
+                <button class="vbtn2">Learn More</button>
             </div>
-            <div class="vision-card">
+            <div class="vision-card3">
                 <img src="/assets/card-icon.png" alt="Modern Infrastructure">
                 <h3>Modern Infrastructure</h3>
-                <p>Building state-of-the-art infrastructure.</p>
-                <button>Learn More</button>
+                <p class="visiontext">Building state-of-the-art infrastructure.</p>
+                <button class="vbtn3">Learn More</button>
             </div>
         </div>
     </section>
 
     <!-- Quote Section -->
     <section class="quote">
-        <blockquote>
-            "Lorem ipsum dolor sit amet consectetur."
-        </blockquote>
-        <p>Dr. Muhammad Yunus</p>
-    </section>
-
-    <!-- Opinion Section -->
-    <section class="opinion">
-        <h2>Your Opinion Matters</h2>
-        <div class="opinion-table">
-            <div class="opinion-row">
-                <p>Do you believe Bangladesh is on the right path?</p>
-                <button>Yes, I Agree</button>
-            </div>
-            <div class="opinion-row">
-                <p>Do you believe Bangladesh is on the right path?</p>
-                <button>Yes, I Agree</button>
-            </div>
-            <div class="opinion-row">
-                <p>Do you believe Bangladesh is on the right path?</p>
-                <button>Yes, I Agree</button>
+        <div class="quote-card">
+            <img src="/assets/quote-bg.png" alt="Quote Icon" class="quote-bg">
+            <div class="quote-text">
+                <blockquote>
+                    "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"
+                </blockquote>
+                <p><span class="cite">Dr. Muhammad Yunus</span> <span class="small-text">Chief Adviser of the People's Republic of Bangladesh</span></p>
             </div>
         </div>
     </section>
+
+    <!-- Opinion Section -->
+
+<!-- Opinion Section -->
+<section class="opinion">
+    <h2>Your Opinion Matters</h2>
+    <!-- Outer Card Container -->
+    <div class="opinion-card">
+      <!-- Optional inner wrapper to control table width -->
+      <div class="opinion-table-wrapper">
+        <table>
+          <thead>
+            <tr>
+              <th>Questions</th>
+              <th>Select Your Opinion</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                Do you believe Bangladesh is on the right path toward becoming a developed nation?
+              </td>
+              <td>
+                <select class="opinion-select">
+                  <option value="agree">Yes, I Agree</option>
+                  <option value="disagree">No, I Disagree</option>
+                  <option value="neutral">Neutral</option>
+                </select>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Do you believe Bangladesh is on the right path toward becoming a developed nation?
+              </td>
+              <td>
+                <select class="opinion-select">
+                  <option value="agree">Yes, I Agree</option>
+                  <option value="disagree">No, I Disagree</option>
+                  <option value="neutral">Neutral</option>
+                </select>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                Do you believe Bangladesh is on the right path toward becoming a developed nation?
+              </td>
+              <td>
+                <select class="opinion-select">
+                  <option value="agree">Yes, I Agree</option>
+                  <option value="disagree">No, I Disagree</option>
+                  <option value="neutral">Neutral</option>
+                </select>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </section>
+  
+  
+  
 
     <!-- Recent News -->
     <section class="news">
