github not showing images inpages tried a fix

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <button class="btn-secondary">Explore New Bangladesh</button>
         </div>
         <div class="banner-image">
-            <img src="/assets/hero.png" alt="Hero Page Logo">
+            <img src="./assets/hero.png" alt="Hero Page Logo">
         </div>
     </section>
 
@@ -43,22 +43,22 @@
         <h2>Pillars of "Bangladesh 2.0"</h2>
         <div class="pillars-container">
             <div class="pillar-card">
-                <img class="lightb" src="/assets/card-icon.png" alt="Innovation Icon">
+                <img class="lightb" src="./assets/card-icon.png" alt="Innovation Icon">
                 <h3 class="textleft">Innovation</h3>
                 <p>Dolor sit amet consectetur elit.</p>
             </div>
             <div class="pillar-card">
-                <img class="lightb" src="/assets/card-icon.png" alt="Sustainability Icon">
+                <img class="lightb" src="./assets/card-icon.png" alt="Sustainability Icon">
                 <h3 class="textleft">Sustainability</h3>
                 <p>Dolor sit amet consectetur elit.</p>
             </div>
             <div class="pillar-card">
-                <img class="lightb" src="/assets/card-icon.png" alt="Infrastructure Icon">
+                <img class="lightb" src="./assets/card-icon.png" alt="Infrastructure Icon">
                 <h3 class="textleft">Infrastructure</h3>
                 <p>Dolor sit amet consectetur elit.</p>
             </div>
             <div class="pillar-card">
-                <img class="lightb" src="/assets/card-icon.png" alt="Empowerment Icon">
+                <img class="lightb" src="./assets/card-icon.png" alt="Empowerment Icon">
                 <h3 class="textleft">Empowerment</h3>
                 <p>Dolor sit amet consectetur elit.</p>
             </div>
@@ -73,19 +73,19 @@
         </p>
         <div class="vision-cards">
             <div class="vision-card1">
-                <img src="/assets/card-icon.png" alt="Digital Transformation">
+                <img src="./assets/card-icon.png" alt="Digital Transformation">
                 <h3>Digital Transformation</h3>
                 <p class="visiontext">Creating a nationwide digital ecosystem.</p>
                 <button class="vbtn1">Learn More</button>
             </div>
             <div class="vision-card2">
-                <img src="/assets/card-icon.png" alt="Green Energy">
+                <img src="./assets/card-icon.png" alt="Green Energy">
                 <h3>Green Energy</h3>
                 <p class="visiontext">Investments in solar and wind energy.</p>
                 <button class="vbtn2">Learn More</button>
             </div>
             <div class="vision-card3">
-                <img src="/assets/card-icon.png" alt="Modern Infrastructure">
+                <img src="./assets/card-icon.png" alt="Modern Infrastructure">
                 <h3>Modern Infrastructure</h3>
                 <p class="visiontext">Building state-of-the-art infrastructure.</p>
                 <button class="vbtn3">Learn More</button>
@@ -96,7 +96,7 @@
     <!-- Quote Section -->
     <section class="quote">
         <div class="quote-card">
-            <img src="/assets/quote-bg.png" alt="Quote Icon" class="quote-bg">
+            <img src="./assets/quote-bg.png" alt="Quote Icon" class="quote-bg">
             <div class="quote-text">
                 <blockquote>
                     "Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis quas, ducimus labore sequi quos deserunt optio id repellendus tempora veniam amet porro corporis exercitationem numquam debitis culpa laudantium odio, velit vel minus sit? Veritatis aut maiores ducimus fugit error ex sit, dignissimos eum tempora perferendis a rem culpa ab aliquid modi? Est vitae neque esse, cumque, quam tenetur rem earum eaque mollitia modi ipsum aspernatur, dignissimos excepturi aliquam architecto soluta necessitatibus vero?"
@@ -177,13 +177,13 @@
       <div class="news-card">
         <!-- Left: Image -->
         <div class="news-image">
-          <img src="/assets/satelite.png" alt="Satellite">
+          <img src="./assets/satelite.png" alt="Satellite">
         </div>
         <!-- Right: Content -->
         <div class="news-content">
           <h3>Bangladesh Launches New Satellite</h3>
           <div class="news-meta">
-            <img src="/assets/al-jazeera.png" alt="Al Jazeera Logo" class="news-logo">
+            <img src="./assets/al-jazeera.png" alt="Al Jazeera Logo" class="news-logo">
             <div class="news-date-time">
               <span class="news-date">05/01/2025</span>
               <span class="news-time">12:00 PM</span> 
@@ -200,13 +200,13 @@
       <div class="news-card">
         <!-- Left: Image -->
         <div class="news-image">
-          <img src="/assets/satelite.png" alt="Satellite">
+          <img src="./assets/satelite.png" alt="Satellite">
         </div>
         <!-- Right: Content -->
         <div class="news-content">
           <h3>Another News Title</h3>
           <div class="news-meta">
-            <img src="/assets/al-jazeera.png" alt="Al Jazeera Logo" class="news-logo">
+            <img src="./assets/al-jazeera.png" alt="Al Jazeera Logo" class="news-logo">
             <div class="news-date-time">
               <span class="news-date">05/02/2025</span>
               <span class="news-time">03:30 PM</span>
@@ -269,9 +269,9 @@
     <h2 class="footer-title">Bangladesh 2.0</h2>
     
     <div class="footer-socials">
-      <a href="#" aria-label="Facebook"><img src="/assets/facebook.png" alt="Facebook"></a>
-      <a href="#" aria-label="Twitter"><img src="/assets/x.png" alt="Twitter"></a>
-      <a href="#" aria-label="Instagram"><img src="/assets/instagram.png" alt="Instagram"></a>
+      <a href="#" aria-label="Facebook"><img src="./assets/facebook.png" alt="Facebook"></a>
+      <a href="#" aria-label="Twitter"><img src="./assets/x.png" alt="Twitter"></a>
+      <a href="#" aria-label="Instagram"><img src="./assets/instagram.png" alt="Instagram"></a>
     </div>
   </footer>
   
