--- a/index.html
+++ b/index.html
@@ -269,9 +269,9 @@
     <h2 class="footer-title">Bangladesh 2.0</h2>
     
     <div class="footer-socials">
-      <a href="#" aria-label="Facebook"><img src="./assets/facebook.png" alt="Facebook"></a>
-      <a href="#" aria-label="Twitter"><img src="./assets/x.png" alt="Twitter"></a>
-      <a href="#" aria-label="Instagram"><img src="./assets/instagram.png" alt="Instagram"></a>
+      <a href="#" aria-label="Facebook"><img src="../assets/facebook.png" alt="Facebook"></a>
+      <a href="#" aria-label="Twitter"><img src="../assets/x.png" alt="Twitter"></a>
+      <a href="#" aria-label="Instagram"><img src="../assets/instagram.png" alt="Instagram"></a>
     </div>
   </footer>
   
